# world-rendering

./: .gitignore  CMakeLists.txt  README.md  WINDOW  build.sh  main.cpp  main.h
lib/camera/: fps.h  orbit.h
lib/include/glshader/: glshader.h
lib/include/stb/: stb_image.h  stb_truetype.h
lib/shaders/infiniteGrid/: vertex.glsl
src/assimpModel/: AssimpModel.h  utils.h
src/mesh/: mesh.h
src/model/: model.h
src/models/world/: world.h
src/shaders/centerAnchor/: frag.glsl
src/shaders/infiniteGrid/: frag.glsl
src/shaders/worldModel/: vertex.glsl
src/world/: world.h
